* loading template * replacing title, text and tags for each task * saving the file * viewing the file

--- a/GTG/taskbrowser/export/export_simple.html
+++ b/GTG/taskbrowser/export/export_simple.html
@@ -1,6 +1,19 @@
-header
-$START_BODY
-body
+<html>
+    <head>
+        <title> Things to do </title>
+    <body>
 
-$END_BODY
-footer
+
+        <ul>
+--DELIMITER--
+
+            <li>
+                I have to do $TITLE. <br>
+                In particular: $TEXT 
+            </li>
+
+--DELIMITER--
+        <ul>
+    </body>
+</html>
+
