--- a/GTG/plugins/export/export_templates/template_simple.html
+++ b/GTG/plugins/export/export_templates/template_simple.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+
 <!--
  -*- coding: utf-8 -*-
  pylint: disable-msg=W0201
@@ -70,6 +72,9 @@ template (remember to attach the file). It's good karma!
 <html>
     <head>
         <title> Things to do </title>
+        <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" >
+
+    </head>
     <body>
 
         <ul>
@@ -77,7 +82,7 @@ template (remember to attach the file). It's good karma!
                 $task_template($task)
             #end for
 
-        <ul>
+        </ul>
 
         <!-- this is the function that generates a task -->
         #def task_template($task)
