--- a/GTG/plugins/export/export_templates/template_simple.html
+++ b/GTG/plugins/export/export_templates/template_simple.html
@@ -72,7 +72,7 @@ template (remember to attach the file). It's good karma!
 <html>
     <head>
         <title> Things to do </title>
-        <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" >
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8" >
 
     </head>
     <body>
