Export plugin ready for GTG 0.3. Going to add scripts support

--- a/GTG/plugins/export/export_templates/template_simple.html
+++ b/GTG/plugins/export/export_templates/template_simple.html
@@ -80,7 +80,8 @@ For a more advanced usage of templates, scroll down to the end of this document
     <body>
 
         <ul>
-            #for $task in $tasks$task_template($task)
+            #for $task in $tasks:
+                $task_template($task)
             #end for
 
         </ul>
